# snipcli

./: pyproject.toml
snipcli/: __init__.py  db.py  main.py  utils.py
