[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.1.0"
description = "A short description of my project."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
keywords = ["cli", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0",
    "pyperclip>=1.8",
]

[project.urls]
Homepage = "https://github.com/your-username/my_project"
Repository = "https://github.com/your-username/my_project"
Issues = "https://github.com/your-username/my_project/issues"